--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 /* изменить  */
 .logo {
     background-size: contain;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
 }
 
 .drop-down {
